--- a/application/index/view/teacher/schedule.html
+++ b/application/index/view/teacher/schedule.html
@@ -22,8 +22,8 @@
     }
 </style>
 <div class="m-b-md">
-    <h3 class="m-b-none text-black">课程表</h3>
-    <small class="text-muted m-b">您收藏的课程都在这里了</small>
+    <h3 class="m-b-none text-black">我的课程</h3>
+    <small class="text-muted m-b">您需要维护的课程都在这里了</small>
 </div>
 {eq name="$list|count" value='0'}
 <div class="">
