教师个人中心上传视频附件调整

--- a/application/index/view/index/details.html
+++ b/application/index/view/index/details.html
@@ -262,7 +262,7 @@
             logo:'__STATIC__/admin/images/logo.svg',
             video: {
                 url: '__STATIC__/<?php  echo str_replace("\\","/",$video["path"]) ?>',
-                pic: '__STATIC__/<?php  echo str_replace("\\","/",$lesson["poster"]) ?>'
+                // pic: '__STATIC__/<?php  echo str_replace("\\","/",$lesson["poster"]) ?>'
             }
         });
 
