--- a/application/index/view/teacher/videos.html
+++ b/application/index/view/teacher/videos.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-xs-2">
             <div style="float: right">
-                <button data-href="{:url('index/videoAdd')}" class="btn btn-sm btn-info video-add"><i class="fa  fa-plus"></i> 添加</button>
+                <button data-href="{:url('index/videoAlt')}" class="btn btn-sm btn-info video-add"><i class="fa  fa-plus"></i> 添加</button>
             </div>
         </div>
     </div>
@@ -70,7 +70,7 @@
                 <td>{$video.create_time|date="Y-m-d H:i",###}</td>
                 <td>
                     <a href="{:url('index/details',['id'=>$video.lesson_id,'video_id'=>$video.video_id])}" class="btn btn-sm btn-info">查看</a>
-                    <button class="btn btn-sm btn-dark video-edit" data-href="{:url('index/videoAdd',['id'=>$video.video_id])}">编辑</button>
+                    <button class="btn btn-sm btn-dark video-edit" data-href="{:url('index/videoAlt',['id'=>$video.video_id])}">编辑</button>
                     <button class="btn btn-sm btn-danger btn-delete" data-href="{:url('index/videoDel',['id'=>$video.video_id])}">移除</button>
                 </td>
             </tr>
@@ -105,7 +105,7 @@
             var this_e = dom;
             var url = this_e.data('href');
             var id = this_e.data('id');
-            var save_url = '{:url("index/videoSaveAdd")}';
+            var save_url = '{:url("index/videoSaveAlt")}';
             layui_iframe.editBuilder(title,url,function (index,layero) {
                 //获取弹出层的表单
                 var form = layer.getChildFrame('#myform', index);
