--- a/application/index/view/layouts/layout1.html
+++ b/application/index/view/layouts/layout1.html
@@ -58,7 +58,7 @@
             <ul class="nav navbar-nav m-n hidden-xs nav-user user">
                 {empty  name="$Think.session.bigdata_user_type"}
                 <li class="">
-                    <a href="#" >
+                    <a href="{:url('index/register')}" >
                         <span class="hidden-nav-xs m-l-sm register">注册</span>
                     </a>
                 </li>
