--- a/application/index/view/login/login1.html
+++ b/application/index/view/login/login1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>BigData Admin</title>
+  <title>BigData</title>
   <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
   <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
   <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
@@ -14,9 +14,6 @@
   <script src="__STATIC__/js/commom.js"></script>
 </head>
 <style>
-  .admin-login-title{
-    text-align: center;
-  }
   #InputEmail::-webkit-input-placeholder,#InputPassword::-webkit-input-placeholder,#userType::-webkit-input-placeholder {
     color: #8d98a7;
   }
@@ -29,7 +26,8 @@
           <div class="row w-100">
             <div class="col-lg-5 mx-auto">
               <div class="auth-form-dark text-left p-5">
-                <h2 class="admin-login-title">用户登陆</h2>
+                <h2 class="text-center"><a href="{:url('index/index')}"><img src="__STATIC__/img/favicon.png" width="50px" alt=""></a></h2>
+                <h2 class="text-center">用户登陆</h2>
                 <form class="pt-5">
                   <form id="admin-login-form">
                     <div class="form-group">
