--- a/public/static/admin/css/style.css
+++ b/public/static/admin/css/style.css
@@ -15477,7 +15477,7 @@ dl {
   background-size: cover; }
 
 .auth.register-full-bg {
-  background: url("../images/auth/register_1.jpg");
+  background: url("../images/register_bg.jpg");
   background-size: cover; }
 
 .auth .auth-form-dark {
