--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -29,15 +29,15 @@
                 <p>{$val|date='Y-m-d H:i:s',###}</p>
             {/volist}
         </div>
-        <div id="chart1" style="width: 100%;height: 30rem"></div>
+        <div id="chart1" class="m-t-lg" style="width: 100%;height: 30rem"></div>
     </div>
 </section>
 <script>
     //1.按部门 2.按员工 3.按日期
     var option = {
         title: {
-            text: '',
-            subtext: ''
+            text: '图表分析',
+            subtext: '最近7天'
         },
         tooltip: {
             trigger: 'axis'
@@ -50,7 +50,7 @@
             show: true,
             feature: {
                 magicType: {show: true, type: ['line', 'bar']},
-                restore: {show: true},
+                // restore: {show: true},
                 saveAsImage: {show: true}
             }
         },
@@ -58,7 +58,7 @@
         xAxis: [
             {
                 type: 'category',
-                data: ['1','2','3']
+                data: {$xAxis_name_arr}
             }
         ],
         yAxis: [
@@ -66,20 +66,7 @@
                 type: 'value'
             }
         ],
-        series: [{
-            name: '周一',
-            type: 'line',
-            data: [48, 20, 32]
-        },{
-            name: '周一',
-            type: 'line',
-            data: [5, 27, 35]
-        },
-            {
-                name: '周一',
-                type: 'line',
-                data: [51, 33, 65]
-            }],
+        series: {$echart_data_increment}
     };
 
     // 使用刚指定的配置项和数据显示图表。
