注册、忘记密码、邮箱验证

--- a/application/index/view/index/comment.html
+++ b/application/index/view/index/comment.html
@@ -1,4 +1,4 @@
-{layout name="layouts/layout1" /}
+{layout name="layouts/layout" /}
 <section class="scrollable padder-lg padder-v page-inner">
   <div class="tab-pane" id="{$type==1?'comment':'question'}">
     <div class="text-center wrapper hidden is_loadding_dom">
