--- a/application/index/view/index/details.html
+++ b/application/index/view/index/details.html
@@ -1,4 +1,4 @@
-{layout name="layouts/layout1" /}
+{layout name="layouts/layout" /}
 <style>
   .page-inner .video_params .list-group-item,.page-inner .panel{
     background-color:#f2f4f8;
