--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -7,7 +7,7 @@
     }
 </style>
 
-{layout name="layouts/layout1" /}
+{layout name="layouts/layout" /}
 <header class="header bg-light dk padder-lg">
     <p class="font-thin padder recently"><a class="{$params['order']==1?'text-success':''}" href="{:url('index',['order'=>1])}">最新</a></p>
     <p class="font-thin padder popular"><a class="{$params['order']==2?'text-success':''}" href="{:url('index',['order'=>2])}">最热</a></p>
