--- a/application/index/view/index/question.html
+++ b/application/index/view/index/question.html
@@ -7,7 +7,7 @@
     }
 </style>
 
-{layout name="layouts/layout1" /}
+{layout name="layouts/layout" /}
 
     <div class="row row-sm">
         {volist name='list' id='vo'}
