--- a/application/index/view/index/teacherhome.html
+++ b/application/index/view/index/teacherhome.html
@@ -1,4 +1,4 @@
-{layout name="layouts/layout1" /}
+{layout name="layouts/layout" /}
 <section class="scrollable padder-lg padder-v page-inner">
     <div class="well bg-white b m-t">
         <div class="row">
