--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -33,7 +33,7 @@
             <ul class="navbar-nav ml-lg-auto">
                 <li class="nav-item d-none d-sm-block profile-img">
                     <a class="nav-link profile-image" href="#">
-                        <img src="__STATIC__/admin/images/faces/face4.jpg" alt="profile-img">
+                        <img src="__STATIC__/admin/images/auth/avatar.jpeg" alt="profile-img">
                     </a>
                 </li>
                 <li class="nav-item d-none d-sm-block profile-img">
