--- a/application/index/view/index/questiondetail.html
+++ b/application/index/view/index/questiondetail.html
@@ -47,21 +47,22 @@
 
         <div class="row row-sm">
             <section class="comment-list block">
+                {volist name='reply' id='item'}
                 <article id="comment-id-1" class="comment-item">
                     <a class="pull-left thumb-sm avatar">
-                        <img src="/bigdata/public/static/\uploads\poster\5c3364a531495.jpg" class="img-circle" alt="...">
+                        <img src="__STATIC__/{$item.comment_uname_avatar}" class="img-circle" alt="...">
                     </a>
                     <span class="arrow left"></span>
                     <section class="comment-body panel panel-default">
                         <header class="panel-heading bg-white">
-                            <a href="#">John smith</a>
+                            <a href="#">{$item.comment_uname}</a>
                             <span class="text-muted m-l-sm pull-right">
                                 <i class="fa fa-clock-o"></i>
-                                2019-03-11 12:07
+                                {$item.create_time|date='Y-m-d H:i',###}
                             </span>
                         </header>
                         <div class="panel-body">
-                            <div>Lorem ipsum dolor sit amet, consecteter adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</div>
+                            <div>{$item.content}</div>
                             <div class="comment-action m-t-sm">
                                 <a href="#comment-form" class="btn btn-default btn-xs">
                                     <i class="fa fa-mail-reply text-muted"></i> 回复
@@ -69,30 +70,32 @@
                             </div>
                         </div>
                     </section>
-                </article>
-                <!-- .comment-reply -->
-                <article id="comment-id-2" class="comment-item comment-reply">
-                    <a class="pull-left thumb-sm avatar">
-                        <img src="/bigdata/public/static/\uploads\poster\5c3364a531495.jpg" alt="...">
-                    </a>
-                    <span class="arrow left"></span>
-                    <section class="comment-body panel panel-default text-sm">
-                        <div class="panel-body">
+                    {volist name='item.child' id='child'}
+                    <article class="comment-item comment-reply">
+                        <a class="pull-left thumb-sm avatar">
+                            <img src="__STATIC__/{$child.comment_uname_avatar}" alt="...">
+                        </a>
+                        <span class="arrow left"></span>
+                        <section class="comment-body panel panel-default text-sm">
+                            <div class="panel-body">
                           <span class="text-muted m-l-sm pull-right">
                             <i class="fa fa-clock-o"></i>
-                            2019-03-11 13:07
+                            {$child.create_time|date='Y-m-d H:i',###}
                           </span>
-                            <a href="#">Mika Sam</a>
-                            Report this comment is helpful
-                            <div class="comment-action m-t-sm">
-                                <a href="#comment-form" class="btn btn-default btn-xs">
-                                    <i class="fa fa-mail-reply text-muted"></i> 回复
-                                </a>
+                                <a href="#">{$child.comment_uname}</a>
+                                {$child.content}
+                                <div class="comment-action m-t-sm">
+                                    <a href="#comment-form" class="btn btn-default btn-xs">
+                                        <i class="fa fa-mail-reply text-muted"></i> 回复
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-
-                    </section>
+                        </section>
+                    </article>
+                    {/volist}
                 </article>
+                {/volist}
+                <!-- .comment-reply -->
                 <article class="comment-item media" id="comment-form">
                     <a class="pull-left thumb-sm avatar"><img src="/bigdata/public/static/\uploads\poster\5c3364a531495.jpg" alt="..."></a>
                     <section class="media-body">
@@ -110,7 +113,7 @@
         </div>
 
         <div class="row text-center page_items">
-
+            {$reply->render()}
         </div>
     </div>
 </section>
