--- a/application/index/view/layouts/layout.html
+++ b/application/index/view/layouts/layout.html
@@ -160,7 +160,7 @@
 
 <script>
     // add notes
-    live2d_settings['hitokotoAPI'] = 'hitokoto.cn';  // 一言 API
+    // live2d_settings['hitokotoAPI'] = 'hitokoto.cn';  // 一言 API
     live2d_settings['modelId'] = 5;                  // 默认模型 ID
     live2d_settings['modelTexturesId'] = 1;          // 默认材质 ID
     live2d_settings['modelStorage'] = false;         // 不储存模型 ID
