问答详情回复表结构调整，示例数据查询校验

--- a/application/index/view/index/questiondetail.html
+++ b/application/index/view/index/questiondetail.html
@@ -16,11 +16,11 @@
                 <div class="bg hidden-xs ">
                     <div class="clearfix">
                         <a href="#" class="pull-left thumb-sm avatar b-3x m-r">
-                            <img src="/bigdata/public/static/\uploads\poster\5c3364a531495.jpg" alt="...">
+                            <img src="__STATIC__/{$question.student_avatar}" alt="...">
                         </a>
                         <div class="clear">
                             <div class="h4 m-t-sm m-b-sm text-dark" style="color: #333333">
-                                <a href="/bigdata/public/index/teacherhome/teacher_id/2.html" class="text-info">roy</a>
+                                <p class="text-info">{$question.student_name}</p>
                             </div>
                         </div>
                     </div>
