问答回复完成

--- a/application/index/view/index/questiondetail.html
+++ b/application/index/view/index/questiondetail.html
@@ -6,7 +6,7 @@
 </style>
 <section class="scrollable padder-lg padder-v page-inner">
     <div class="m-t">
-        <p class="h5">
+        <p class="h5 text-brown">
             <a href="{:url('index/details',['id'=>$breadcrumbs.lesson_id])}">{$breadcrumbs.lesson_name}</a>
             \
             <a href="{:url('index/details',['id'=>$breadcrumbs.lesson_id,'video_id'=>$breadcrumbs.video_id])}">{$breadcrumbs.video_name}</a>
@@ -55,7 +55,8 @@
                     <span class="arrow left"></span>
                     <section class="comment-body panel panel-default">
                         <header class="panel-heading bg-white">
-                            <a href="#">{$item.comment_uname}</a>
+                            <p>{$item.comment_uname} {$item['user_type']==2?'<label class="label bg-success m-l-xs">教师</label>':''}</p>
+
                             <span class="text-muted m-l-sm pull-right">
                                 <i class="fa fa-clock-o"></i>
                                 {$item.create_time|date='Y-m-d H:i',###}
@@ -64,9 +65,13 @@
                         <div class="panel-body">
                             <div>{$item.content}</div>
                             <div class="comment-action m-t-sm">
-                                <a href="#comment-form" class="btn btn-default btn-xs">
+                                <span class="btn btn-default btn-xs btn-reply">
                                     <i class="fa fa-mail-reply text-muted"></i> 回复
-                                </a>
+                                </span>
+                            </div>
+                            <div class="reply-div" hidden>
+                                <textarea class="form-control" rows="3" placeholder="请输入..." style="resize: none;"></textarea>
+                                <button type="submit" class="btn btn-success m-t-sm btn-child-reply" data-id="{$item.id}" data-floor_id="{$item.id}">提交</button>
                             </div>
                         </div>
                     </section>
@@ -78,16 +83,19 @@
                         <span class="arrow left"></span>
                         <section class="comment-body panel panel-default text-sm">
                             <div class="panel-body">
-                          <span class="text-muted m-l-sm pull-right">
-                            <i class="fa fa-clock-o"></i>
-                            {$child.create_time|date='Y-m-d H:i',###}
-                          </span>
-                                <a href="#">{$child.comment_uname}</a>
+                                <span class="text-muted m-l-sm pull-right">
+                                    <i class="fa fa-clock-o"></i>{$child.create_time|date='Y-m-d H:i',###}
+                                </span>
+                                <p><span class="text-info">{$child.comment_uname}{$child['user_type']==2?'<label class="label bg-success m-l-xs">教师</label>':''} </span> 回复 <span class="text-info">{$child.comment_receive_uname}</span></p>
                                 {$child.content}
                                 <div class="comment-action m-t-sm">
-                                    <a href="#comment-form" class="btn btn-default btn-xs">
+                                    <span class="btn btn-default btn-xs btn-reply">
                                         <i class="fa fa-mail-reply text-muted"></i> 回复
-                                    </a>
+                                    </span>
+                                </div>
+                                <div class="reply-div" hidden>
+                                    <textarea class="form-control" rows="3" placeholder="请输入..." style="resize: none;"></textarea>
+                                    <button class="btn btn-success m-t-sm btn-child-reply" data-id="{$child.id}" data-floor_id="{$item.id}">提交</button>
                                 </div>
                             </div>
                         </section>
@@ -98,14 +106,14 @@
                 <!-- .comment-reply -->
                 <article class="comment-item media" id="comment-form">
                     <a class="pull-left thumb-sm avatar"><img src="/bigdata/public/static/\uploads\poster\5c3364a531495.jpg" alt="..."></a>
-                    <section class="media-body">
-                        <form action="index.html" class="m-b-none">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Input your comment here">
-                                <span class="input-group-btn">
-                              <button class="btn btn-primary" type="button">POST</button>
-                            </span>
+                    <section class="media-body bg-white">
+                        <form class="m-b-none">
+                            <div class="input-group clear m-b-sm">
+                                <textarea class="form-control" id="replyContent" name="replyContent" style="display: none;"></textarea>
                             </div>
+                            <span class="input-group-btn m-t-sm">
+                              <button class="btn btn-success btn-floor-reply" type="button" data-id="0" data-floor_id="0">提交</button>
+                            </span>
                         </form>
                     </section>
                 </article>
@@ -117,3 +125,67 @@
         </div>
     </div>
 </section>
+<script>
+    var question_id = '{$question.id}';
+    var  index,layedit;
+    function layeditinit(textarea_id){
+        layui.use(['layer', 'layedit'], function () {
+            var layer = layui.layer;
+                layedit = layui.layedit;
+
+            layedit.set({
+                uploadImage: {
+                    url: '{:url("admin/layeditUpload")}' //接口url
+                },
+                placeholder:'请输入...'
+            });
+            index = layedit.build(textarea_id, {height: 150}); //建立编辑器
+        });
+    }
+
+    layeditinit('replyContent');
+
+    $('.comment-list').on('click','.btn-reply',function () {
+        var _this = $(this);
+        _this.parent().parent().find('.reply-div').toggle();
+    });
+
+    $('.comment-list').on('click','.btn-child-reply',function () {
+        var _this = $(this);
+        var content = _this.siblings('textarea').val();
+        var comment_id = _this.data('id');
+        var floor_id = _this.data('floor_id');
+        var params = {content:content,comment_id:comment_id,floor_id:floor_id,question_id:question_id};
+        replysave(params);
+    });
+
+    $('.comment-list').on('click','.btn-floor-reply',function () {
+        layedit.sync(index);
+        var _this = $(this);
+        var content = $('#replyContent').val();
+        var comment_id = _this.data('id');
+        var floor_id = _this.data('floor_id');
+        var params = {content:content,comment_id:comment_id,floor_id:floor_id,question_id:question_id};
+        replysave(params);
+    });
+
+    function replysave(params) {
+        layui.use(['layer', 'layedit'], function () {
+            var layer = layui.layer;
+            if($.trim(params.content) == ''){
+                layer.msg('内容不能为空',{icon:2});
+                return false;
+            }
+            ajax_request.post('{:url("index/saveQuestionReplay")}', params,
+                function (data) {
+                    if(data.is_ok == 'ok'){
+                        layer.msg(data.msg,{icon:1});
+                        location.reload();
+                    }else{
+                        layer.msg(data.msg,{icon:2});
+                    }
+                }
+            );
+        })
+    }
+</script>
